{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1082,
  "lineage": "2e0cc4a0-eacd-6285-9212-88a6ccaeb31b",
  "resources": [
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050e50e125007b72b",
            "arn": "arn:aws:ec2:us-east-1:329599661993:elastic-ip/eipalloc-050e50e125007b72b",
            "association_id": "eipassoc-01f535b5f8a39b822",
            "domain": "vpc",
            "id": "eipalloc-050e50e125007b72b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08bb20db47083a07d",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-34-196-36-207.compute-1.amazonaws.com",
            "public_ip": "34.196.36.207",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b29c71ca05a565c1",
            "arn": "arn:aws:ec2:us-east-1:329599661993:elastic-ip/eipalloc-0b29c71ca05a565c1",
            "association_id": "eipassoc-0cef06821a8b62917",
            "domain": "vpc",
            "id": "eipalloc-0b29c71ca05a565c1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0108be2d1d909b5bb",
            "private_dns": "ip-10-0-2-169.ec2.internal",
            "private_ip": "10.0.2.169",
            "public_dns": "ec2-3-209-179-87.compute-1.amazonaws.com",
            "public_ip": "3.209.179.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Nat_Gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050e50e125007b72b",
            "association_id": "eipassoc-01f535b5f8a39b822",
            "connectivity_type": "public",
            "id": "nat-0423338ca882816ed",
            "network_interface_id": "eni-08bb20db47083a07d",
            "private_ip": "10.0.1.154",
            "public_ip": "34.196.36.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ba5f06f7b83a34f9",
            "tags": {
              "Name": "NAT Gateway 1"
            },
            "tags_all": {
              "Name": "NAT Gateway 1"
            }
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b29c71ca05a565c1",
            "association_id": "eipassoc-0cef06821a8b62917",
            "connectivity_type": "public",
            "id": "nat-0ec4a798c70e90a52",
            "network_interface_id": "eni-0108be2d1d909b5bb",
            "private_ip": "10.0.2.169",
            "public_ip": "3.209.179.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c41b252dc2db2ffd",
            "tags": {
              "Name": "NAT Gateway 2"
            },
            "tags_all": {
              "Name": "NAT Gateway 2"
            }
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Route53",
      "mode": "data",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:329599661993:loadbalancer/net/a6dc36892b8cb43c08aa44b7e0f58978/322c7429ef0d159c",
            "arn_suffix": "net/a6dc36892b8cb43c08aa44b7e0f58978/322c7429ef0d159c",
            "connection_logs": [
              {
              }
            ],
            "dns_name": "a6dc36892b8cb43c08aa44b7e0f58978-322c7429ef0d159c.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:329599661993:loadbalancer/net/a6dc36892b8cb43c08aa44b7e0f58978/322c7429ef0d159c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "a6dc36892b8cb43c08aa44b7e0f58978",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ba5f06f7b83a34f9"
              },
              {
                "subnet_id": "subnet-0c41b252dc2db2ffd"
              }
            ],
            "subnets": [
              "subnet-0ba5f06f7b83a34f9",
              "subnet-0c41b252dc2db2ffd"
            ],
            "tags": {
              "kubernetes.io/cluster/group15-cluster": "owned",
              "kubernetes.io/service-name": "ingress-nginx/ingress-nginx-controller"
            },
            "vpc_id": "vpc-00696ffa09bf585f1",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "module": "module.Route_Tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:route-table/rtb-0f31f70e552abd36c",
            "id": "rtb-0f31f70e552abd36c",
            "owner_id": "329599661993",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0423338ca882816ed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1"
            },
            "tags_all": {
              "Name": "Private Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat",
            "module.Nat_Gateway.aws_nat_gateway.main",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:route-table/rtb-03fc1e3b185cfbc19",
            "id": "rtb-03fc1e3b185cfbc19",
            "owner_id": "329599661993",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ec4a798c70e90a52",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 2"
            },
            "tags_all": {
              "Name": "Private Route Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat",
            "module.Nat_Gateway.aws_nat_gateway.main",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:route-table/rtb-053cbcc4ea7b8630b",
            "id": "rtb-053cbcc4ea7b8630b",
            "owner_id": "329599661993",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071dc46f92ea987e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.main",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb7313a5a81b2517",
            "route_table_id": "rtb-0f31f70e552abd36c",
            "subnet_id": "subnet-0573b764ccdbc3012"
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat",
            "module.Nat_Gateway.aws_nat_gateway.main",
            "module.Route_Tables.aws_route_table.private",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d08447c55894c928",
            "route_table_id": "rtb-03fc1e3b185cfbc19",
            "subnet_id": "subnet-03f00a0dec9ab3e57"
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat",
            "module.Nat_Gateway.aws_nat_gateway.main",
            "module.Route_Tables.aws_route_table.private",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cd963c60a187d4a",
            "route_table_id": "rtb-053cbcc4ea7b8630b",
            "subnet_id": "subnet-0ba5f06f7b83a34f9"
          },
          "dependencies": [
            "module.Route_Tables.aws_route_table.public",
            "module.VPC.aws_internet_gateway.main",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a6331349b2299be",
            "route_table_id": "rtb-053cbcc4ea7b8630b",
            "subnet_id": "subnet-0c41b252dc2db2ffd"
          },
          "dependencies": [
            "module.Route_Tables.aws_route_table.public",
            "module.VPC.aws_internet_gateway.main",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:security-group/sg-029e2cc4e5b9d43a0",
            "description": "Allow SSH inbound traffic from public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029e2cc4e5b9d43a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from public instances",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06bdbf8077f426a82"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Private EC2 SG",
            "name_prefix": "",
            "owner_id": "329599661993",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private EC2 SG"
            },
            "tags_all": {
              "Name": "Private EC2 SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security_Groups.aws_security_group.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:security-group/sg-06bdbf8077f426a82",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bdbf8077f426a82",
            "ingress": [
              {
                "cidr_blocks": [
                  "14.186.212.48/32"
                ],
                "description": "SSH from specific IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public EC2 SG",
            "name_prefix": "",
            "owner_id": "329599661993",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public EC2 SG"
            },
            "tags_all": {
              "Name": "Public EC2 SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:security-group/sg-0d6f124108e7bfa7e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6f124108e7bfa7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "329599661993",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group"
            },
            "tags_all": {
              "Name": "Default Security Group"
            },
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:internet-gateway/igw-071dc46f92ea987e4",
            "id": "igw-071dc46f92ea987e4",
            "owner_id": "329599661993",
            "tags": {
              "Name": "Main IGW"
            },
            "tags_all": {
              "Name": "Main IGW"
            },
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:subnet/subnet-0573b764ccdbc3012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0573b764ccdbc3012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329599661993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:subnet/subnet-03f00a0dec9ab3e57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f00a0dec9ab3e57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "329599661993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:subnet/subnet-0ba5f06f7b83a34f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba5f06f7b83a34f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "329599661993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:subnet/subnet-0c41b252dc2db2ffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c41b252dc2db2ffd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "329599661993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-00696ffa09bf585f1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329599661993:vpc/vpc-00696ffa09bf585f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0073ed89084982ebe",
            "default_route_table_id": "rtb-076fcc51428838b9f",
            "default_security_group_id": "sg-0d6f124108e7bfa7e",
            "dhcp_options_id": "dopt-07658e01e320832f4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00696ffa09bf585f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076fcc51428838b9f",
            "owner_id": "329599661993",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    }
  ]
}